# rsm

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/rsm/: init.hpp  lds.hpp  next.hpp  options.hpp  range.hpp  rsm.hpp  utils.hpp
src/rsm/detail/: common.hpp  lds.hpp  memory.hpp  primes.hpp  rijumptable.inl
src/rsm/distributions/: disk.hpp  hemisphere.hpp  ncube.hpp  sphere.hpp
src/rsm/generators/: pcg32.hpp  splitmix64.hpp  stlcompat.hpp  xoroshiro128p.hpp  xoroshiro64s.hpp
src/rsm/montecarlo/: heuristics.hpp
src/rsm/samplers/: halton.hpp  hammersley.hpp  lhs.hpp  random.hpp  stratified.hpp
tools/: rijumptable.py
